# my_blog

./: .gitignore  Dockerfile  LICENSE  dev_config.json  docker-compose.yaml  pyproject.toml  requirements.txt  wsgi.py
blog/: app.py  commands.py  config.py  db.sqlite  enums.py  extension.py  models.py
blog/admin/: routes.py  views.py
blog/api/: article.py  author.py  tag.py  user.py
blog/api/permissions/: user.py
blog/articles/: views.py
blog/auth/: views.py
blog/authors/: views.py
blog/forms/: articles.py  user.py
blog/schemas/: __init__.py  article.py  author.py  tag.py  user.py
blog/templates/: base.html  hello.html  navbar.html
blog/templates/admin/: index.html
blog/templates/articles/: create.html  details.html  list.html
blog/templates/auth/: login.html
blog/templates/authors/: list.html
blog/templates/macros/: formhelpers.html
blog/templates/users/: details.html  list.html  profile.html  register.html
blog/user/: views.py
instance/: db.sqlite
migrations/versions/: 181f8bd8a547_.py  4a55f288b516_.py  4af45bbc8ef1_.py  6d1444ce01ef_.py  71512dc500e3_.py  b96b0dadcc0f_.py  c1f26c9e008a_.py  c53707bfcb7d_.py  d95a5c613547_.py  e11baa023085_.py
