[tool.poetry]
name = "my-blog"
version = "0.1.0"
description = ""
authors = ["GamBit1986 <mazepa86@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9.16"
flask-login = "^0.5.0"
flask-migrate = "^3.0.0"
python-dotenv = "^0.17.1"
poetry = "^1.4.2"
psycopg2-binary = "^2.8.6"
wtforms = "^2.3.3"
email-validator = "^1.1.2"
flask-wtf = "^0.15.1"
flask-admin = "^1.5.8"
pyyaml = "^6.0"
flask = "1.1.4"
flask-sqlalchemy = "2.5.1"
flask-combo-jsonapi = "^1.1.0"
apispec = "4.7.1"
combojsonapi = "^1.1.2"
markupsafe = "2.0.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
